fixed overlapping filters issue

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,5 +1,5 @@
 .header {
-  background-image: linear-gradient(90deg, #C4D38D 0%, #4D8934 53.65%);
+  background-image: linear-gradient(90deg, #c4d38d 0%, #4d8934 53.65%);
   height: 8vh;
   width: 100%;
   position: fixed;
@@ -20,7 +20,7 @@
 
 .logo {
   width: 9%;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .secondHeader {
@@ -85,9 +85,10 @@
   display: flex;
   justify-content: space-evenly;
   position: sticky;
-  top: 25px;
+  top: 33px;
   background-color: white;
   padding: 25px;
+  z-index: 100;
 }
 
 .buttonItem {
@@ -106,5 +107,5 @@
   height: 40px;
   width: 40px;
   cursor: pointer;
-  color:white;
+  color: white;
 }
